--- a/src/ADG/PrincipalBundle/Resources/views/Default/normativa.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/normativa.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Normativa{% endblock %}
+{% block title %}{{ 'normativa' | trans }}{% endblock %}
 
 {% block body %}
 
