--- a/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Arxiu capitular{% endblock %}
+{% block title %}{{ 'capitular.title' | trans }}{% endblock %}
 
 {% block body %}
 	<div class="page-header">
-        <h1>Arxiu capitular</h1>
+        <h1>{{ 'capitular.title' | trans }}</h1>
 	</div>
 	<div class="row">
 		<div class="col-md-7 col-lg-7">
-			<em>en construcció...</em>
+			<em>{{ 'capitular.avis' | trans }}</em>
 		
 		</div>
 		<div class="col-md-5 col-lg-5">
