--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -1,20 +1,20 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Principal{% endblock %}
+{% block title %}{{ 'index.inici' | trans}}{% endblock %}
 
 {% block body %}
 		<div class="row">
 	        <div class="col-lg-4" align="center">
 	        	<div class="space100"></div>
 	            <img src="{{ asset('bundles/adg/img/logo-bisbat.jpg') }}"/><br>
-	            És propietat del Bisbat de Girona.
+	            {{ 'index.propietat' | trans}}
 	            <div class="space10"></div>
 	            <img src="{{ asset('bundles/adg/img/logo-diputacio.gif') }}"/><br>
-	            Amb la col·laboració de la Diputació de Girona.
+	            {{ 'index.colaborador' | trans}}
 	        </div>
 	        
 	        <div class="col-lg-8">
-	            <div class="page-header"><h1>Notícies</h1></div>
+	            <div class="page-header"><h1>{{ 'index.noticies.title' | trans}}</h1></div>
 	            
 	            {% for noticia in noticies %}
             		<article>
@@ -24,19 +24,10 @@
 	           		<div class="space10"></div>
 	            {% else %}
 	            	<article>
-	           			<p>No hi han notícies recents.<p>
+	           			<p>{{ 'index.noticies.no' | trans}}<p>
 	           		</article>
 				{% endfor %}
 	     
 	        </div>
 	 </div>
- 			<ul class="nav navbar-nav">
-		      <li class="dropdown">
-		        <a class="dropdown-toggle" data-toggle="dropdown">test js<b class="caret"></b></a>
-		        <ul class="dropdown-menu">
-		          <li><a href="#">Action</a></li>
-		          <li><a href="#">Another action</a></li>
-		        </ul>
-		      </li>
-		    </ul>
 {% endblock %}
