--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -1,6 +1,6 @@
 {% extends 'ArxiuBundle::base-arxiu.html.twig' %}
 
-{% block title %}Fons i series{% endblock %}
+{% block title %}{{ 'fons.titol' | trans }}{% endblock %}
 
 {% block stylesheets %}
 	{{ parent() }}
@@ -21,16 +21,16 @@
 			$('#fons_table').dataTable({
 	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
 	                "language": {
-	        			"sLengthMenu": "_MENU_ entrades per pàgina",
-	        			"sZeroRecords": "No s'ha trobat res",
-	        			"sInfo": "Trobades _TOTAL_ entrades",
-	        			"sInfoEmpty": "0 entrades trobades",
-	        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
+	        			"sLengthMenu": "{{ 'fons.datatable.entrades' | trans }}",
+	        			"sZeroRecords": "{{ 'fons.datatable.zero' | trans }}",
+	        			"sInfo": "{{ 'fons.datatable.info' | trans }}",
+	        			"sInfoEmpty": "{{ 'fons.datatable.empty' | trans }}",
+	        			"sInfoFiltered": "{{ 'fons.datatable.filtrades' | trans }}",
 	        			"oPaginate": {
-	        		        "sNext": "Següent",
-	        		        "sPrevious": "Anterior"
+	        		        "sNext": "{{ 'fons.datatable.seguent' | trans }}",
+	        		        "sPrevious": "{{ 'fons.datatable.anterior' | trans }}"
 	        		      },
-	        			"sSearch": "Cerca general: "
+	        			"sSearch": "{{ 'fons.datatable.general' | trans }}:"
 	                }
 	        })
 		} );
@@ -46,7 +46,7 @@
 
 {% block body %}
 	<div class="page-header">
-        <h1>Cerca per fons i series</h1>
+        <h1>{{ 'fons.header' | trans }}</h1>
 	</div>
 	
 	{% for flashMessage in app.session.flashbag.get('success') %}
@@ -77,44 +77,36 @@
     
     <!--Cerca i taula-->
     
-    <!--1 import per cada us de taula-->
-    <!--paraules clau=cerca general de taules, si el selecionat te altres opcions de cerca. filtrar-->
-    <!--fer servir substring en el sql per els camps de dades-->
-    
 {% if seleccio is not null %}
     <div class="col-xs-11 col-sm-11 col-md-8 col-lg-8" style="margin-right:-10px;margin-top:29px">
-    	
-    	<!--formulari amb submit cap a /cerca, on el controlador mirara a kina taula ha dentrar i retornara info + variable indicant taula-->
+ 
     	<!--Cerca-->
 		<div class="row panel panel-default">
 			{% include 'ArxiuBundle:Fons:cerca.html.twig' %}
 		</div><!--/Cerca-->
 	
-	
-		<!--si cerca no esta buit llavors mostrar taula amb estructura feta i casos if segons la variable de la taula-->
 		<!--Taula-->
 		<div class="row">
 			{% if info is not null %}
-				<!--fer servir substring en el sql per els camps de dades-->
 				<table class="table table-striped table-bordered table-hover" id="fons_table">
 			        <thead>
 			            <tr>
-			                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació</th>
+			                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'fons.taula.classificacio' | trans }}</th>
 			                {% if tipus is sameas("fons") or tipus is sameas("mitra") or tipus is sameas("testaments") %}
-			                	<th class="centered-text">Dades</th>
+			                	<th class="centered-text">{{ 'fons.taula.dades' | trans }}</th>
 			                {% elseif tipus is sameas("capellans") or tipus is sameas("monges") %}
-			                	<th class="centered-text">Nom</th>
-			                	<th class="centered-text">Fitxa</th>
+			                	<th class="centered-text">{{ 'fons.taula.nom' | trans }}</th>
+			                	<th class="centered-text">{{ 'fons.taula.fitxa' | trans }}</th>
 			                {% elseif tipus is sameas("seminaristes") %}
-			                	<th class="centered-text">Nom</th>	
+			                	<th class="centered-text">{{ 'fons.taula.nom' | trans }}</th>	
 			                {% elseif tipus is sameas("liberden") %}
-			                	<th class="centered-text">Institució</th>
-			                	<th class="centered-text">Foli</th>
+			                	<th class="centered-text">{{ 'fons.taula.institucio' | trans }}</th>
+			                	<th class="centered-text">{{ 'fons.taula.foli' | trans }}</th>
 			               	{% elseif tipus is sameas("arxius") %}
-				                <th class="centered-text">Data</th>
-				                <th class="centered-text">Dades</th>
+				                <th class="centered-text">{{ 'fons.taula.data' | trans }}</th>
+				                <th class="centered-text">{{ 'fons.taula.dades' | trans }}</th>
 			                {% endif %}
-						    <th class="centered-text">Operacions</th>            
+						    <th class="centered-text">{{ 'fons.taula.operacions' | trans }}</th>            
 			            </tr>
 			        </thead>
 		            <tbody>
@@ -159,28 +151,30 @@
 		        
 		    {% else %}
 		    	<div class="alert alert-info" style="margin-top:10px">
-					Els resultats es mostraran al realitzar la cerca.
+					{{ 'fons.alerta' | trans }}
 				</div>   
 			{% endif %}
 		</div><!--/Taula-->
 	</div>   
 {% else %}
 	<div class="col-xs-11 col-sm-11 col-md-8 col-lg-8 alert alert-info" style="margin-right:-10px;margin-top:29px">
-		Cal escollir el contingut de la cerca.
+		{{ 'fons.alerta2' | trans }}
 	</div>   
 {% endif %}	
 </div>
 
 {# Modals #}
-<div class="modal" id="ampliarInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-</div><!-- /.modal -->
-
-<div class="modal" id="nouFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-</div><!-- /.modal -->
-
-<div class="modal" id="editarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-</div><!-- /.modal -->
-
-<div class="modal" id="eliminarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-</div><!-- /.modal -->
+{% if is_granted('ROLE_ADMIN') %}  
+	<div class="modal" id="ampliarInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	</div><!-- /.modal -->
+	
+	<div class="modal" id="nouFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	</div><!-- /.modal -->
+	
+	<div class="modal" id="editarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	</div><!-- /.modal -->
+	
+	<div class="modal" id="eliminarFons" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	</div><!-- /.modal -->
+{% endif %}
 {% endblock %}
