--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -21,16 +21,16 @@
 			$('#fons_table').dataTable({
 	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
 	                "language": {
-	        			"sLengthMenu": "{{ 'fons.datatable.entrades' | trans }}",
-	        			"sZeroRecords": "{{ 'fons.datatable.zero' | trans }}",
-	        			"sInfo": "{{ 'fons.datatable.info' | trans }}",
-	        			"sInfoEmpty": "{{ 'fons.datatable.empty' | trans }}",
-	        			"sInfoFiltered": "{{ 'fons.datatable.filtrades' | trans }}",
+	        			"sLengthMenu": "{{ 'general.datatable.entrades' | trans }}",
+	        			"sZeroRecords": "{{ 'general.datatable.zero' | trans }}",
+	        			"sInfo": "{{ 'general.datatable.info' | trans }}",
+	        			"sInfoEmpty": "{{ 'general.datatable.empty' | trans }}",
+	        			"sInfoFiltered": "{{ 'general.datatable.filtrades' | trans }}",
 	        			"oPaginate": {
-	        		        "sNext": "{{ 'fons.datatable.seguent' | trans }}",
-	        		        "sPrevious": "{{ 'fons.datatable.anterior' | trans }}"
+	        		        "sNext": "{{ 'general.datatable.seguent' | trans }}",
+	        		        "sPrevious": "{{ 'general.datatable.anterior' | trans }}"
 	        		      },
-	        			"sSearch": "{{ 'fons.datatable.general' | trans }}:"
+	        			"sSearch": "{{ 'general.datatable.general' | trans }}:"
 	                }
 	        })
 		} );
