--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
@@ -76,7 +76,7 @@
 			</div>
 		</div><!--/Cerca-->
 		
-		<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+		<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 table-responsive">
 			{% if info is not null %}
 				{% if seleccio is sameas('dispenses') %}
 					<!-- taula dispenes -->
