--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
@@ -34,6 +34,24 @@
 	                }
 	        })
 		} );
+
+		$(document).ready(function() {
+			$('#cognoms_table').dataTable({
+	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
+	                "language": {
+	        			"sLengthMenu": "{{ 'general.datatable.entrades' | trans }}",
+	        			"sZeroRecords": "{{ 'general.datatable.zero' | trans }}",
+	        			"sInfo": "{{ 'general.datatable.info' | trans }}",
+	        			"sInfoEmpty": "{{ 'general.datatable.empty' | trans }}",
+	        			"sInfoFiltered": "{{ 'general.datatable.filtrades' | trans }}",
+	        			"oPaginate": {
+	        		        "sNext": "{{ 'general.datatable.seguent' | trans }}",
+	        		        "sPrevious": "{{ 'general.datatable.anterior' | trans }}"
+	        		      },
+	        			"sSearch": "{{ 'general.datatable.general' | trans }}:"
+	                }
+	        })
+		} );
 	
 		$(document).on('hidden.bs.modal', function (e) {
 		    $(e.target).removeData('bs.modal');
@@ -116,6 +134,20 @@
 			        </table>
 				{% else %}
 					<!-- taula cognoms -->
+					<table class="table table-striped table-bordered table-hover" id="cognoms_table">
+				        <thead>
+				            <tr>
+				                <th class="centered-text" id="idHeader" title="Tooltip!">Cognoms</th>
+				            </tr>
+				        </thead>
+			            <tbody>
+			                {% for i in info %}
+			                    <tr>
+			                        <td style="min-width: 100px">{{ i }}</td>
+			                    </tr>
+			                {% endfor %}
+			            </tbody>
+			        </table>
 				{% endif %}
 				
 			{% else %}
