--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/cercaDispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/cercaDispenses.html.twig
@@ -1,4 +1,4 @@
-<div class="panel-heading"><h4 style="margin-top:-3px;margin-bottom:-3px">Cerca de dispenses matrimonials</h4></div>
+<div class="panel-heading"><h4 style="margin-top:-3px;margin-bottom:-3px">{{ 'dispenses.cerca.titol' | trans }}</h4></div>
 
 <div class="panel-body">
 	<form action="{{ path('cerca_dispenses') }}" method="post">
