--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
@@ -137,7 +137,7 @@
 					<table class="table table-striped table-bordered table-hover" id="cognoms_table">
 				        <thead>
 				            <tr>
-				                <th class="centered-text" id="idHeader" title="Tooltip!">Cognoms</th>
+				                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'dispenses.cognom' | trans }}</th>
 				            </tr>
 				        </thead>
 			            <tbody>
