--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,18 +6,14 @@
           
         <link href="{{ asset('bundles/adg/css/font-awesome.css') }}" rel="stylesheet">
         <link href="{{ asset('bundles/adg/css/bootstrap.min.css') }}" rel="stylesheet">
-
-	    
 		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
-
         {% block stylesheets %}{% endblock %}
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        
     </head>
-    <body>
     
+    <body>
 	     <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">	
 			    <div class="navbar-header">
 				    <a class="navbar-brand" href="{{ path('index') }}"">{{ 'base.title' | trans }}</a>
@@ -44,12 +40,17 @@
 		    </div><!-- /.wrapper -->
  			{% include '::footer.html.twig' %}
 		  </div>
-
 		
 	    <script src="{{ asset('bundles/adg/js/jquery.js') }}" type="text/javascript"></script>
-	    <script src="{{ asset('bundles/adg/js/bootstrap.min.js') }}" type="text/javascript"></script>	         
+	    <script src="{{ asset('bundles/adg/js/bootstrap.min.js') }}" type="text/javascript"></script>
+	    <script src="{{ asset('bundles/adg/js/printThis.js') }}" type="text/javascript"></script>
+	    <script type="text/javascript">
+		    function imprimir(name)
+			{
+				$(name).printThis();
+			}	         
+	    </script>
         {% block javascripts %}{% endblock %}
-
-
+        
     </body>
 </html>
