--- a/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/fons.html.twig
@@ -30,7 +30,7 @@
 	        		        "sNext": "{{ 'general.datatable.seguent' | trans }}",
 	        		        "sPrevious": "{{ 'general.datatable.anterior' | trans }}"
 	        		      },
-	        			"sSearch": "{{ 'general.datatable.general' | trans }}:"
+	        			"sSearch": "{{ 'general.datatable.general' | trans }}: "
 	                }
 	        })
 		} );
@@ -88,7 +88,7 @@
 		<!--Taula-->
 		<div class="row">
 			{% if info is not null %}
-				<table class="table table-striped table-bordered table-hover" id="fons_table">
+				<table class="table table-striped table-bordered table-hover imprimir" id="fons_table">
 			        <thead>
 			            <tr>
 			                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'fons.taula.classificacio' | trans }}</th>
@@ -106,7 +106,7 @@
 				                <th class="centered-text">{{ 'fons.taula.data' | trans }}</th>
 				                <th class="centered-text">{{ 'fons.taula.dades' | trans }}</th>
 			                {% endif %}
-						    <th class="centered-text">{{ 'fons.taula.operacions' | trans }}</th>            
+						    <th class="noimprimir centered-text">{{ 'fons.taula.operacions' | trans }}</th>            
 			            </tr>
 			        </thead>
 		            <tbody>
@@ -127,7 +127,7 @@
 				                	<td>{{ i.data }}</td>
 				                	<td>{{ i.dades }}</td>
 				                {% endif %}
-	                        	<td>
+	                        	<td class="noimprimir">
 	                        		{% if tipus is sameas("liberden") %}
 	                        			<a data-toggle="modal" href="{{ path('fons_detall', { 'seleccio': seleccio, 'id':i.id }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
 	                        		{% else %}
@@ -148,13 +148,15 @@
 		            </tbody>
 		        </table>
 		        
-		        
 		    {% else %}
 		    	<div class="alert alert-info" style="margin-top:10px">
 					{{ 'fons.alerta' | trans }}
 				</div>   
 			{% endif %}
 		</div><!--/Taula-->
+		<div class="row">
+			<button style="float: right;" class="btn btn-default" onclick="imprimir('#fons_table')" ><i class="icon-print"></i></button>
+		</div>
 	</div>   
 {% else %}
 	<div class="col-xs-11 col-sm-11 col-md-8 col-lg-8 alert alert-info" style="margin-right:-10px;margin-top:29px">
