--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -31,7 +31,7 @@
 </div>
 {% endfor %}
 {% for flashMessage in app.session.flashbag.get('error') %}
-<div class="row" style="margin-left:0px ">
+<div class="row" style="margin-left:0px;margin-right:-10px">
 	<div class="col-md-7 col-lg-7" style="margin-left:-5px ">
 	    <div class="alert alert-danger alert-dismissable">
 	    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
