--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -47,7 +47,7 @@
 	<div class="page-header"><h1>Notícies</h1></div>
 	
 {# Cerca #}
-<div class="row" style="margin-left:0px">	
+<div class="row" style="margin-left:0px;margin-right:0px;">	
 	<div class="col-xs-8 col-sm-10 col-md-8 col-lg-6 well">
     	<h4>Cerca per atributs</h4> 
 		<form class="form">
@@ -85,7 +85,7 @@
 
 
 {# Taula #}
-<div class="row">
+<div class="row" style="margin-right:0px;">
 	<div class="col-lg-12 col-md-12 col-sm-12 table-responsive">
 		{# Taula #}
 		<table class="table table-striped table-bordered table-hover" id="noticies_table">
@@ -95,7 +95,7 @@
                 <th class="centered-text">Títol</th>
                 <th class="centered-text">Contingut</th>
                 {% if is_granted('ROLE_ADMIN') %}
-			    	<th class="centered-text">Operacions</th>            
+			    	<th class="centered-text noimprimir">Operacions</th>            
            	   	{% endif %}
             </tr>
         </thead>
@@ -106,7 +106,7 @@
                         <td>{{ noticia.titol }}</td>
                         <td>{{ noticia.contingut }}</td>
                         {% if is_granted('ROLE_ADMIN') %}
-                        	<td>
+                        	<td class="noimprimir">
                         		<a data-toggle="modal" href="{{ path('noticies_editar', { 'id': noticia.id }) }}" data-target="#editarNoticia" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
                         		<a data-toggle="modal" href="{{ path('noticies_eliminar', { 'id': noticia.id }) }}" data-target="#eliminarNoticia" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
                         	</td>
@@ -117,6 +117,9 @@
         </table>
 
 	</div>
+</div>
+<div class="row" style="margin-left:0px;margin-right:0px;">
+	<button style="float: right;margin-right:15px" class="btn btn-default" onclick="imprimir('#noticies_table')" ><i class="icon-print"></i></button>
 </div>
 
 {# Modals #}
